@@ -15,7 +15,6 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
@@ -26,7 +25,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>3.0.1</spring.boot.version>
-        <mybatis.plus.version>3.5.2</mybatis.plus.version>
+        <mybatis.plus.version>3.5.2.7-SNAPSHOT</mybatis.plus.version>
         <mybatis.generator.version>3.5.3</mybatis.generator.version>
         <mysql.version>8.0.31</mysql.version>
         <druid.version>1.2.15</druid.version>
@@ -136,4 +135,19 @@
             <version>${transmittable.thread.version}</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <!-- 下载mybatis-plus SNAPSHOT 版本所需仓库 -->
+        <repository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>OSS Snapshot repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
